# oneAPI-samples

Libraries/oneDNN/pointnet/: CMakeLists.txt  README.md  pointnet.cpp  prepareData.py
